{
  "version": 4,
  "terraform_version": "1.14.5",
  "serial": 91,
  "lineage": "f245e3de-5496-c7c6-aff6-9b1c2a11553b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-019715e0d74f695be",
            "arn": "arn:aws:ec2:ap-south-1:282627754396:instance/i-0bfb62fadf242c2d1",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bfb62fadf242c2d1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "sandhya1012",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-00913e24fa0b30291"
              }
            ],
            "primary_network_interface_id": "eni-00913e24fa0b30291",
            "private_dns": "ip-171-0-7-131.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "171.0.7.131",
            "public_dns": "ec2-65-2-187-154.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.2.187.154",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e5f212b736b9ea4b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0efe7ee18c2f2a324",
            "tags": {
              "Name": "Devops_instance"
            },
            "tags_all": {
              "Name": "Devops_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c258fc18b81fa4a7"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "282627754396",
            "id": "i-0bfb62fadf242c2d1",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_key_pair.ec2_key",
            "aws_security_group.newsec",
            "aws_subnet.main1",
            "aws_vpc.MY_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:282627754396:internet-gateway/igw-01f2ce040bb595607",
            "id": "igw-01f2ce040bb595607",
            "owner_id": "282627754396",
            "region": "ap-south-1",
            "tags": {
              "Name": "Devops_IGW"
            },
            "tags_all": {
              "Name": "Devops_IGW"
            },
            "vpc_id": "vpc-09a14dff45977899f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.MY_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:282627754396:route-table/rtb-0e3c90f4f9e9516b8",
            "id": "rtb-0e3c90f4f9e9516b8",
            "owner_id": "282627754396",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01f2ce040bb595607",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Devops_RT"
            },
            "tags_all": {
              "Name": "Devops_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-09a14dff45977899f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "282627754396",
            "id": "rtb-0e3c90f4f9e9516b8",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_vpc.MY_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0236193c0c1862ca2",
            "region": "ap-south-1",
            "route_table_id": "rtb-0e3c90f4f9e9516b8",
            "subnet_id": "subnet-0efe7ee18c2f2a324"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.main_rt",
            "aws_subnet.main1",
            "aws_vpc.MY_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046f65260e6d7ee00",
            "region": "ap-south-1",
            "route_table_id": "rtb-0e3c90f4f9e9516b8",
            "subnet_id": "subnet-08f3ed42313919691"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.main_rt",
            "aws_subnet.main2",
            "aws_vpc.MY_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f6a45c0c3839638",
            "region": "ap-south-1",
            "route_table_id": "rtb-0e3c90f4f9e9516b8",
            "subnet_id": "subnet-01a6c5aaa2d30e6ad"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.main_rt",
            "aws_subnet.main3",
            "aws_vpc.MY_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "newsec",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:282627754396:security-group/sg-0c258fc18b81fa4a7",
            "description": "iam creatiing a new security",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c258fc18b81fa4a7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "automation_security",
            "name_prefix": "",
            "owner_id": "282627754396",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09a14dff45977899f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "282627754396",
            "id": "sg-0c258fc18b81fa4a7",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.MY_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:282627754396:subnet/subnet-0efe7ee18c2f2a324",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "171.0.0.0/17",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0efe7ee18c2f2a324",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "282627754396",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Devops_SUB1"
            },
            "tags_all": {
              "Name": "Devops_SUB1"
            },
            "vpc_id": "vpc-09a14dff45977899f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "282627754396",
            "id": "subnet-0efe7ee18c2f2a324",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.MY_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:282627754396:subnet/subnet-08f3ed42313919691",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "171.0.128.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f3ed42313919691",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "282627754396",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Devops_SUB2"
            },
            "tags_all": {
              "Name": "Devops_SUB2"
            },
            "vpc_id": "vpc-09a14dff45977899f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "282627754396",
            "id": "subnet-08f3ed42313919691",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.MY_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:282627754396:subnet/subnet-01a6c5aaa2d30e6ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "171.0.192.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a6c5aaa2d30e6ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "282627754396",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Devops_SUB3"
            },
            "tags_all": {
              "Name": "Devops_SUB3"
            },
            "vpc_id": "vpc-09a14dff45977899f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "282627754396",
            "id": "subnet-01a6c5aaa2d30e6ad",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.MY_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "MY_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:282627754396:vpc/vpc-09a14dff45977899f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "171.0.0.0/16",
            "default_network_acl_id": "acl-0c9125db1e7aebd22",
            "default_route_table_id": "rtb-0c5d5ec0a3045f5a8",
            "default_security_group_id": "sg-06d3ea9fef66367af",
            "dhcp_options_id": "dopt-0c8983c22003b4cab",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09a14dff45977899f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c5d5ec0a3045f5a8",
            "owner_id": "282627754396",
            "region": "ap-south-1",
            "tags": {
              "Name": "Devops_VPC"
            },
            "tags_all": {
              "Name": "Devops_VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "282627754396",
            "id": "vpc-09a14dff45977899f",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}